Added several routes and updated documentation.
